5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1578_1559.log
== TEST (2019-03-17 14:04:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper(frase))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.upper(frase))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 14:05:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper(frase))
-- EXECUTION TIME:
0.206341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1559/main.py", line 2, in <module>
    print(frase.upper(frase))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 14:05:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper(Ada Lovelace foi a primeira programadora da historia))

-- ERROR:
File "XXXX", line 2
    print(frase.upper(Ada Lovelace foi a primeira programadora da historia))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 14:06:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper)

-- OUTPUT:
<built-in method upper of str object at 0x7fe614d8e9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 14:06:13) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper)

-- OUTPUT:
<built-in method upper of str object at 0x7f45a34239f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 14:06:44) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper)

-- EXECUTION TIME:
0.147908
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f24b798d4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-17 14:06:59) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())

-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 14:32:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.197967
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
